# fribidixetex

./: COPYING  CREDITS  INSTALLATION  Makefile.am  README.md  configure.ac  description-pak
src/: fribiditex-bidi.c  fribiditex-dict.c  fribiditex-ignore.c  fribiditex-io.c  fribiditex-io.h  fribiditex-util.c  fribiditex.c  fribidixetex-bidi.c  fribidixetex-ignore.c  fribidixetex.c
